src/test/ui/did_you_mean/issue-49746-unicode-confusable-in-float-literal-expt.stderr
error: expected at least one digit in exponent
  --> $DIR/issue-49746-unicode-confusable-in-float-literal-expt.rs:1:47
   |
LL | const UNIVERSAL_GRAVITATIONAL_CONSTANT: f64 = 6.674e−11; // m³⋅kg⁻¹⋅s⁻²
   |                                               ^^^^^^

error: unknown start of token: \u{2212}
  --> $DIR/issue-49746-unicode-confusable-in-float-literal-expt.rs:1:53
   |
LL | const UNIVERSAL_GRAVITATIONAL_CONSTANT: f64 = 6.674e−11; // m³⋅kg⁻¹⋅s⁻²
   |                                                     ^
   |
help: Unicode character '−' (Minus Sign) looks like '-' (Minus/Hyphen), but it is not
   |
LL | const UNIVERSAL_GRAVITATIONAL_CONSTANT: f64 = 6.674e-11; // m³⋅kg⁻¹⋅s⁻²
   |                                                     ~

error[E0277]: cannot subtract `{integer}` from `{float}`
  --> $DIR/issue-49746-unicode-confusable-in-float-literal-expt.rs:1:53
   |
LL | const UNIVERSAL_GRAVITATIONAL_CONSTANT: f64 = 6.674e−11; // m³⋅kg⁻¹⋅s⁻²
   |                                                     ^ no implementation for `{float} - {integer}`
   |
   = help: the trait `Sub<{integer}>` is not implemented for `{float}`

error[E0369]: cannot subtract `{integer}` from `{float}`
  --> $DIR/issue-49746-unicode-confusable-in-float-literal-expt.rs:1:53
   |
LL | const UNIVERSAL_GRAVITATIONAL_CONSTANT: f64 = 6.674e−11; // m³⋅kg⁻¹⋅s⁻²
   |                                               ------^-- {integer}
   |                                               |
   |                                               {float}

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0277, E0369.
For more information about an error, try `rustc --explain E0277`.
