src/test/ui/did_you_mean/issue-49746-unicode-confusable-in-float-literal-expt.rs
const UNIVERSAL_GRAVITATIONAL_CONSTANT: f64 = 6.674e−11; // m³⋅kg⁻¹⋅s⁻²
//~^ ERROR expected at least one digit in exponent

fn main() {}
